fix: Delete horizontal scroll, add overflow:hidden to section style

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,11 +4,13 @@
 
 .sd{
     .section{
+        width: 100%;
         height: 100vh;
         color: $primary;
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
         
         h3{
             font-size: 3em;
